some background text to group1

--- a/SummerSchoolPaper/paper.bib
+++ b/SummerSchoolPaper/paper.bib
@@ -75,6 +75,28 @@ booktitle={Proceedings of the Eleventh European Workshop on Performance Engineer
   year={2013}
 }
 
+@inproceedings{hornbaek:replications,
+    abstract = {{A replication is an attempt to confirm an earlier study's findings. It is often claimed that research in Human-Computer Interaction (HCI) contains too few replications. To investigate this claim we examined four publication outlets (891 papers) and found 3\% attempting replication of an earlier result. The replications typically confirmed earlier findings, but treated replication as a confirm/not-confirm decision, rarely analyzing effect sizes or comparing in depth to the replicated paper. When asked, most authors agreed that their studies were replications, but rarely planned them as such. Many non-replication studies could have corroborated earlier work if they had analyzed data differently or used minimal effort to collect extra data. We discuss what these results mean to HCI, including how reporting of studies could be improved and how conferences/journals may change author instructions to get more replications.}},
+    address = {New York, NY, USA},
+    author = {Hornbaek, Kasper and Sander, S{\o}ren S. and Javier Andr\'{e}s Bargas Avila and Simonsen, Jakob G.},
+    booktitle = {Proceedings of the SIGCHI Conference on Human Factors in Computing Systems},
+    citeulike-article-id = {13160301},
+    citeulike-linkout-0 = {http://portal.acm.org/citation.cfm?id=2557004},
+    citeulike-linkout-1 = {http://dx.doi.org/10.1145/2556288.2557004},
+    doi = {10.1145/2556288.2557004},
+    isbn = {978-1-4503-2473-1},
+    keywords = {hci, repro},
+    location = {Toronto, Ontario, Canada},
+    pages = {3523--3532},
+    posted-at = {2014-05-06 14:18:35},
+    priority = {2},
+    publisher = {ACM},
+    series = {CHI '14},
+    title = {{Is Once Enough?: On the Extent and Content of Replications in Human-computer Interaction}},
+    url = {http://dx.doi.org/10.1145/2556288.2557004},
+    year = {2014}
+  }
+
 @article{kotthoff,
      author = {Kotthoff, Lars},
      title = {Reliability of computational experiments on virtualised hardware},
