adding a note on size limits of supplements in the GMD journal

--- a/SummerSchoolPaper/group3.tex
+++ b/SummerSchoolPaper/group3.tex
@@ -17,7 +17,11 @@ Even if the legal status of the code developed for a given experiment is settled
 This in fact was also the case in one of the programs in question, as the code relied on a proprietary software library.
 
 We also noted a lack of domain-specific workflows for recomputation in non-CS journals.
-A counterexample is the journal Geoscientific Model Development (GMD), which encourages reviewers to check the code.\footnote{DOI: 10.5194/gmd-6-1233-2013 }
+A counterexample is the Geoscientific Model Development (GMD) journal, which encourages reviewers to get
+  acquainted with the code behind papers under review \citep{GMD_editorial_2013}.
+Yet, the same journal, as of now, imposes a 50~MB limit on the size of electronic supplements 
+  what effectively rules out shipping a VM together with the paper.
+
 The level of computer proficiency in non-CS domains\footnote{For example, see: ``\emph{Computational science: ...Error. Why scientific programming does not compute}''. DOI:10.1038/467775a.} is also likely to influence the ability of researchers to use the Virtual Machines --- it is arguably less likely that a physics or urban-planning journal reviewer will be comfortable using a VM, in contrast to CS-related journals.
 
 We give a more detailed description of the experiments in the remainder of this section.
