--- a/SummerSchoolPaper/paper.bib
+++ b/SummerSchoolPaper/paper.bib
@@ -110,3 +110,13 @@ booktitle={Proceedings of the Eleventh European Workshop on Performance Engineer
      eprint = {http://dx.doi.org/10.1080/0952813X.2013.784812}
 }
 
+@article{GMD_editorial_2013,
+  title={Editorial: The publication of geoscientific model developments v1.0},
+  author={GMD Executive Editors},
+  journal={Geosci. Model Dev.},
+  volume={6},
+  number={4},
+  pages={1233--1242},
+  year={2013}
+}
+
