--- a/SummerSchoolPaper/group3.tex
+++ b/SummerSchoolPaper/group3.tex
@@ -40,6 +40,10 @@ The use of the SSJ package is not an obstacle because it is released under the G
 
 The resulting virtual machine contains the Java source files, allowing researchers with knowledge of Java to analyse the correctness of the programme. However, the code is not documented and may be hard to read. Specifically, parameters are hard-coded and no interpretation is given of the resulting numbers and \LaTeX\ code.
 
+The output of the Java code is displayed in Table~\ref{tab: z bootstrapped cis}.
+
+\input{bus_table.tex}
+
 \subsection*{Experiment 2: Solar Physics}
 
 At the start of the recomputation exercise it was judged that the results presented in \cite{bareford2010nanoflare} would be the easiest (of the three publications outside of computer science) to reproduce. The underlying code is serial in nature and not tied to specific hardware or operating system platform. 
