--- a/SummerSchoolPaper/group3.tex
+++ b/SummerSchoolPaper/group3.tex
@@ -18,7 +18,7 @@ This in fact was also the case in one of the programs in question, as the code r
 
 We also noted a lack of domain-specific workflows for recomputation in non-CS journals.
 A counterexample is the Geoscientific Model Development (GMD) journal, which encourages reviewers to get
-  acquainted with the code behind papers under review \citep{GMD_editorial_2013}.
+  acquainted with the code behind papers under review \cite{GMD_editorial_2013}.
 Yet, the same journal, as of now, imposes a 50~MB limit on the size of electronic supplements 
   what effectively rules out shipping a VM together with the paper.
 
