fix author list

--- a/SummerSchoolPaper/ack.tex
+++ b/SummerSchoolPaper/ack.tex
@@ -18,7 +18,5 @@ at the University of St Andrews.
 We are also grateful to speakers at the Summer School who were not also authors of this paper: 
 Neil Chue Hong,
 Stephen Crouch, 
-Darren Kidney, 
-Miguel Nacenta,
-Burkhard Schafer, and
-Kenji Takeda.
+Darren Kidney, and
+Burkhard Schafer.
